<resources>
    <string name="app_name">MemiApp</string>
    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_confirm_request">ConfirmRequest</string>
    <string name="material_icon_info">&#xe9d4;</string>
    <string name="spinner_title">title</string>
    <string name="title_activity_register_receipient">Register Receipient</string>
    <string name="title_activity_register_sender">Register</string>
    <string name="title_activity_request_details">RequestDetails</string>
    <string name="title_activity_about">About</string>

    <string name="pause">Pause Location Updates</string>
    <string name="resume">Resume Location Updates</string>

    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
    <string name="use_address">Use Address</string>
    <string name="use_location">Use Latitude/Longitude</string>
    <string name="get_address">Get Address</string>
    <string name="fetch">Fetch</string>
    <string name="title_activity_request_all_details">RequestAllDetails</string>
    <string name="title_activity_check_out">CheckOut</string>

</resources>
